--- a/public/assets/web_css/base.css
+++ b/public/assets/web_css/base.css
@@ -3,7 +3,7 @@
 
 /* reset 2018.11
 -------------------------------------------------------*/
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
 v2.0 | 20110126
 License: none (public domain)
 */
@@ -23,7 +23,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font: inherit;
+	/*font: inherit;*/
 	vertical-align: baseline;
 }
 html {
